TP #2198 - Fix contrast errors on sr text triggered by inherited colors

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -248,6 +248,10 @@ footer {
     width: 100%;
 }
 
+a#skip2main {
+    color: #0054AD;
+    background: #fff;
+}
 #skip2main {
     position: absolute;
     left: 10px;
@@ -1122,6 +1126,12 @@ textarea {
     width: 1px;
 }
 
+#searchsubmit {
+    .screen-reader-text{
+        color:#655329;
+        background-color: #fff;
+    }
+}
 
 /* =Menu
 -------------------------------------------------------------- */
